--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     width: 100%;
     height: 100vh;
     justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .total{
